Add more info on the title and second page.

--- a/tex/title.tex
+++ b/tex/title.tex
@@ -51,9 +51,10 @@ THE BRITISH STUDY EDITION\\
 The Standard Reference Text in British English\tunemarkuptwo{nofnt}{}{%
 ,\\
 with Metric Measures, Textual Variants,\\
-Study Notes \&\ \totalfigures\ Illustrations\\
+Study Notes \&\ \totalfigures\ Illustrations\\[1pt]
 }
-\tunemarkup{pgnexus7}{\textcolor{ubdarkred}{With Words of Jesus in Red Colour}\\}
+\tunemarkup{pgnexus7}{\textcolor{ubdarkred}{With Words of Jesus in Red Colour}\\[1pt]}
+Edited by Tigran Aivazian\\
 }%
 \vspace*{\stretch{0.6}}
 \tunemarkuptwo{nofancydecor}{}{%
@@ -79,13 +80,15 @@ Study Notes \&\ \totalfigures\ Illustrations\\
 \tunemarkup{pgnexus7}{\fontsize{8}{10}\itshape}
 \tunemarkup{pgkindledx}{\fontsize{10}{12}\itshape}
 \parbox{0.9\linewidth}{\centering
-\textbf{\upshape\nocopyright\ No copyright is claimed on this edition.\\The text of the Urantia Papers is in the \itshape public domain}.\\[5pt]
+\textbf{\upshape\nocopyright\ No copyright is claimed on this book.\\
+The text of the Urantia Papers is in the \itshape public domain}.\\[5pt]
 Cover design by Gary Tonge, www.vision-afar.com.\\
 The latest version of this book can be downloaded from:\\
 {\upshape\bfseries http://www.bibles.org.uk}\\
-%The apparatus (marked with a circle in the text) contains all significant changes made since the 1955 first edition of the Urantia Book.\\
+Please send all comments \&\ suggestions to {\makeatletter\upshape tigran@bibles.org.uk\makeatother}\\
+The apparatus (marked with a circle in the text) contains all significant changes made since the 1955 first edition of the Urantia Book.\\
 The symbol \pc\tunemarkup{pgluluhb}{\kern-2pt} marks the first paragraph in the group as in the first edition, where such groups were delimited by blank lines.\\
-%The asterisk * indicates a study note other than a textual variant.\\[5pt]
+The asterisk * indicates a study note other than a textual variant.\\[5pt]
 \tux\ Typeset with \XeLaTeX\ under Linux.\\
 Text set in \textbf{\tunemarkup{minionpro}{Adobe }\tunemarkup{garamond}{Adobe }\urantiamainfont} at \urantiamainfontsize pt.\\[18pt]
 \upshape\small\bfseries Version: \mytoday{}\\
